Fix: visible text

--- a/client/src/styles/SectorsPage/ListenLearn/index.scss
+++ b/client/src/styles/SectorsPage/ListenLearn/index.scss
@@ -65,6 +65,11 @@
                 text-align: justify;
 
                 gap: 1rem;
+
+                h3,
+                p {
+                    color: white;
+                }
             }
         }
     }
